<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_verification"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:textColor="#CC000000"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we_have_verification_code_to"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="#80000000"/>

            <TextView
                android:id="@+id/mobilenotxtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:textColor="#CC000000"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:hint="@string/enter_the_otp"
                    android:inputType="number"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>

            </com.google.android.material.textfield.TextInputLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_not_received_yet"
                android:textColor="#99000000"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/recenBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_code"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/lightRed"/>


            </LinearLayout>

            <Button
                android:id="@+id/verifyBtn2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/btn_bg"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/verify_otp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>